--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ drift.load('mbdgxhgbyunp');
             <div class="title col-12 col-lg-8">
                 <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2"><strong>START BUILDING YOUR BUSINESS</strong></h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5"><strong>
-                    Easily add subscribe and contact forms without any server-side integration.
+                    Use the form to register your details and we will contact you back.
                 </strong></h3>
             </div>
         </div>
