--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ drift.load('mbdgxhgbyunp');
 <!-- /Google Analytics -->
 
 
-  <link rel="stylesheet" href="style.less" class="cid-reWhqwvOvF" id="menu1-1" data-rv-view="722"><section class="menu cid-reWhqwvOvF" once="menu" id="menu1-1">
+  <link rel="stylesheet" href="style.less" class="cid-reWhqwvOvF" id="menu1-1" data-rv-view="144"><section class="menu cid-reWhqwvOvF" once="menu" id="menu1-1">
 
     
 
@@ -86,7 +86,7 @@ drift.load('mbdgxhgbyunp');
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="#top">
                          <img src="assets/images/mycoopshop-copy-122x51.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -104,7 +104,7 @@ drift.load('mbdgxhgbyunp');
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="cid-reWhoq4U2z mbr-fullscreen" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="cid-reWhoq4U2z mbr-fullscreen" id="header2-0">
 
     
 
@@ -1026,7 +1026,8 @@ drift.load('mbdgxhgbyunp');
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
+    <input name="animation" type="hidden">
   <input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='https://mycoopshop.com/data-policy/'>cookie policy</a>.">
   </body>
 </html>
