--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ drift.load('mbdgxhgbyunp');
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="cid-reWhoq4U2z mbr-fullscreen" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="cid-reWhoq4U2z mbr-fullscreen" id="header2-0">
 
     
 
@@ -376,7 +376,7 @@ drift.load('mbdgxhgbyunp');
             <div class="plan col-12 mx-2 my-2 justify-content-center">
                 <div class="plan-header text-center pt-5">
                     <h3 class="plan-title mbr-fonts-style display-5">
-                        Reg <strike>$4998</strike><br><strong>OUR OFFER IS</strong></h3>
+                        Reg <strike>$4998</strike><br><strong>OUR OFFER IS $2716</strong><br><strong><u>OR</u></strong></h3>
                     <div class="plan-price">
                         <span class="price-value mbr-fonts-style display-5">
                             $
@@ -390,7 +390,7 @@ drift.load('mbdgxhgbyunp');
                 <div class="plan-body pb-5">
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-5">
-                            <li class="list-group-item">For a limited time MyCoopShop is offering&nbsp;<strong>EARLY ADOPTORS</strong></li>
+                            <li class="list-group-item"><span style="font-size: 1.5rem;">For a limited time, MyCoopShop is offering&nbsp;</span><strong>EARLY ADOPTERS</strong><br></li>
                             <li class="list-group-item"><strong>
                                 G Suite Enterprise FREE</strong></li>
                         </ul>
