--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
@@ -27,49 +25,6 @@
   
 </head>
 <body>
-
-<!-- Google Analytics -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-132785510-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-132785510-1');
-</script>
-
-<!-- Start of Async Drift Code -->
-<script>
-"use strict";
-
-!function() {
-  var t = window.driftt = window.drift = window.driftt || [];
-  if (!t.init) {
-    if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
-    t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
-    t.factory = function(e) {
-      return function() {
-        var n = Array.prototype.slice.call(arguments);
-        return n.unshift(e), t.push(n), t;
-      };
-    }, t.methods.forEach(function(e) {
-      t[e] = t.factory(e);
-    }), t.load = function(t) {
-      var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-      o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
-      var i = document.getElementsByTagName("script")[0];
-      i.parentNode.insertBefore(o, i);
-    };
-  }
-}();
-drift.SNIPPET_VERSION = '0.3.1';
-drift.load('mbdgxhgbyunp');
-</script>
-<!-- End of Async Drift Code -->
-<!-- /Google Analytics -->
-
-
   <link rel="stylesheet" href="style.less" class="cid-reWhqwvOvF" id="menu1-1" data-rv-view="217"><section class="menu cid-reWhqwvOvF" once="menu" id="menu1-1">
 
     
@@ -104,7 +59,7 @@ drift.load('mbdgxhgbyunp');
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a site for free</a></section><section class="cid-reWhoq4U2z mbr-fullscreen" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="cid-reWhoq4U2z mbr-fullscreen" id="header2-0">
 
     
 
@@ -153,7 +108,7 @@ drift.load('mbdgxhgbyunp');
             <div class="modalWindow-container">
                 <div class="modalWindow-video-container">
                     <div class="modalWindow-video">
-                        <iframe width="100%" height="100%" frameborder="0" allowfullscreen="1" data-src="https://youtu.be/Odu7j-qY5wA"></iframe>
+                        <iframe width="100%" height="100%" frameborder="0" allowfullscreen="1" data-src="https://youtu.be/IErtovhPEpk"></iframe>
                     </div>
                     <a class="close" role="button" data-dismiss="modal">
                         <span aria-hidden="true" class="mbri-close mbr-iconfont closeModal"></span>
@@ -238,7 +193,7 @@ drift.load('mbdgxhgbyunp');
 
     <div class="container align-center">
         <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2"><strong>You have business needs. We have the gear.</strong><br>YOUR ONLINE BUSINESS IS JUST<strong> 4 STEPS AWAY!</strong></h2>
-        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-5"><strong>This is how MyCoopShop works with you to build your online business.</strong></h3>
+        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-2"><strong>MyCoopShop works with you to build your online business.</strong></h3>
 
         <div class="container timelines-container" mbri-timelines="">
             <div class="row timeline-element reverse separline">      
@@ -267,7 +222,7 @@ drift.load('mbdgxhgbyunp');
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Business Planning</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7"></p><p><strong><span style="font-size: 1rem;">Develop your niche and offering</span><br></strong></p><strong>Market research &amp; competitive analysis<br>Build your ideal customer persona / profile<br>Create your business and strategic plan</strong><br><em>*if you have an existing business we will optimise your products and services for the digital economy.</em><p></p>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7"><strong>Develop your niche and offering<br>Market research &amp; competitive analysis<br>Build your ideal customer persona / profile<br>Create your business and strategic plan</strong><br><em>*if you have an existing business we will optimise your products and services for the digital economy.</em></p><p><strong><span style="font-size: 1rem;">Develop your niche and offering</span><br></strong></p><strong>Market research &amp; competitive analysis<br>Build your ideal customer persona / profile<br>Create your business and strategic plan</strong><br><em>*if you have an existing business we will optimise your products and services for the digital economy.</em><p></p>
                     </div>
                 </div>
             </div> 
@@ -1012,22 +967,19 @@ drift.load('mbdgxhgbyunp');
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/playervimeo/vimeo_player.js"></script>
-  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/mbr-tabs/mbr-tabs.js"></script>
   <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
     <input name="animation" type="hidden">
-  <input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='https://mycoopshop.com/data-policy/'>cookie policy</a>.">
   </body>
 </html>
