--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="cid-reWhoq4U2z mbr-fullscreen" id="header2-0">
+<section class="engine"><a href="https://mycoopshop.com">Find what you want. Get what you need.</a></section><section class="cid-reWhoq4U2z mbr-fullscreen" id="header2-0">
 
     
 
@@ -138,7 +138,7 @@
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                            <a href="https://mobirise.co/">
+                            <a href="https://mycoopshop.com/">
                                 <span class="mbr-iconfont mbri-devices"></span>
                             </a>
                             </div>
@@ -147,7 +147,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="https://mobirise.co/">
+                                <a href="https://mycoopshop.com/">
                                     <span class="mbr-iconfont mobi-mbri-cart-add mobi-mbri"></span>
                                 </a>
                             </div>
@@ -156,7 +156,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="https://mobirise.co/">
+                                <a href="https://mycoopshop.com/">
                                     <span class="mbri-cash mbr-iconfont"></span>
                                 </a>
                             </div>
@@ -165,7 +165,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="https://mobirise.co/">
+                                <a href="https://mycoopshop.com/">
                                     <span class="mbr-iconfont mbri-like"></span>
                                 </a>
                             </div>
@@ -193,7 +193,7 @@
 
     <div class="container align-center">
         <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2"><strong>You have business needs. We have the gear.</strong><br>YOUR ONLINE BUSINESS IS JUST<strong> 4 STEPS AWAY!</strong></h2>
-        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-2"><strong>MyCoopShop works with you to build your online business.</strong></h3>
+        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-2 style="color:white"><strong>MyCoopShop works with you to build your online business.</strong></h3>
 
         <div class="container timelines-container" mbri-timelines="">
             <div class="row timeline-element reverse separline">      
@@ -222,7 +222,7 @@
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Business Planning</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7"><strong>Develop your niche and offering<br>Market research &amp; competitive analysis<br>Build your ideal customer persona / profile<br>Create your business and strategic plan</strong><br><em>*if you have an existing business we will optimise your products and services for the digital economy.</em></p><p><strong><span style="font-size: 1rem;">Develop your niche and offering</span><br></strong></p><strong>Market research &amp; competitive analysis<br>Build your ideal customer persona / profile<br>Create your business and strategic plan</strong><br><em>*if you have an existing business we will optimise your products and services for the digital economy.</em><p></p>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7"><strong>Develop your niche and offering<br>Market research &amp; competitive analysis<br>Build your ideal customer persona / profile<br>Create your business and strategic plan</strong><br><em>*if you have an existing business we will optimise your products and services for the digital economy.</em></p>
                     </div>
                 </div>
             </div> 
@@ -372,7 +372,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 100%;">
-                <img src="assets/images/mbr-1014x570.jpg" alt="Mobirise" title="">
+                <img src="assets/images/mbr-1014x570.jpg" alt="mycoopshop" title="">
             </div>
 
             <div class="media-content">
@@ -510,7 +510,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/dashboard-2-original-522x294.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/dashboard-2-original-522x294.jpg" alt="mycoopshop" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Digital Workplace</h4>
@@ -524,7 +524,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/mbr-522x348.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/mbr-522x348.jpg" alt="mycoopshop" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">eCommerce Strategies</h4>
@@ -536,7 +536,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/mbr-522x294.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/mbr-522x294.jpg" alt="mycoopshop" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Internet Marketing</h4>
@@ -548,7 +548,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/mbr-522x289.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/mbr-522x289.jpg" alt="mycoopshop" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Social Media Channels</h4>
@@ -616,7 +616,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/mbr-1046x795.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/mbr-1046x795.jpg" alt="mycoopshop" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>Full Horizon Drones</strong></h4>
@@ -628,7 +628,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/mbr-1046x697.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/mbr-1046x697.jpg" alt="mycoopshop" title="">
                     </div>
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>Green Trees Indoor Plant Hire</strong></h4>
@@ -655,7 +655,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/mbr-1046x631.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/mbr-1046x631.jpg" alt="mycoopshop" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>
@@ -668,7 +668,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/hero-image-1046x588.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/hero-image-1046x588.jpg" alt="mycoopshop" title="">
                     </div>
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>Ariix - The Opportunity Company</strong></h4>
