--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <link rel="stylesheet" href="style.less" class="cid-reWhqwvOvF" id="menu1-1" data-rv-view="214"><section class="menu cid-reWhqwvOvF" once="menu" id="menu1-1">
+  <link rel="stylesheet" href="style.less" class="cid-reWhqwvOvF" id="menu1-1" data-rv-view="160"><section class="menu cid-reWhqwvOvF" once="menu" id="menu1-1">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="cid-reWhoq4U2z mbr-fullscreen" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="cid-reWhoq4U2z mbr-fullscreen" id="header2-0">
 
     
 
@@ -73,7 +73,7 @@
                 <p class="mbr-text pb-3 mbr-fonts-style display-5"><strong>
                     MyCoopShop</strong> has all the business building tools needed to succeed in the Digital Economy.
                 </p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://hello.mycoopshop.com/mycoopshop-start">START BUILDING</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://hello.mycoopshop.com/start">START BUILDING</a>
                     <a class="btn btn-md btn-white-outline display-4" href="index.html#header8-4">LEARN MORE</a></div>
             </div>
         </div>
