--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ drift.load('mbdgxhgbyunp');
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center py-2 mbr-bold mbr-fonts-style display-1">Cooperate with other entreprenuers.</h1>
+                <h1 class="mbr-section-title align-center py-2 mbr-bold mbr-fonts-style display-1">Cooperate with other entrepreneurs.</h1>
                 <p class="mbr-text align-center py-2 mbr-fonts-style display-2"><em>Powering profit to your business!
                 </em></p>
                 <div class="mbr-media show-modal align-center py-2" data-modal=".modalWindow">
@@ -438,7 +438,7 @@ drift.load('mbdgxhgbyunp');
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">Easy Point of Sale</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">"Invoicing is so 2018!"<br><br>Having "add to cart" features let customers buy immediately from your website.<br><br>THE BENEFITS:<br>Reducing admin time;<br>Increasing overall profitability;<br>Automating stock control;<br>Creating customer loyalty;<br>Developing business intelligence through analytics.</p>
+                  <p class="mbr-text mbr-fonts-style display-7"><b>"Invoicing is so 2018!"</b><br><br>Having "add to cart" features let customers buy immediately from your website.<br><br>THE BENEFITS:<br>Reducing admin time;<br>Increasing overall profitability;<br>Automating stock control;<br>Creating customer loyalty;<br>Developing business intelligence through analytics.</p>
                 </div>
             </div>
 
@@ -458,7 +458,7 @@ drift.load('mbdgxhgbyunp');
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">Manage Customers</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">Managing customer relationships is the secret sauce transforming your business into a strong, vibrant and rapidly growing one. Customer relationship management (CRM) software provides is the sauce!<br><br>THE BENEFITS:<br>The right customer details; Increased sales effectiveness; Creates amazing customer engagement.</p>
+                    <p class="mbr-text mbr-fonts-style display-7">Managing customer relationships is the secret sauce transforming your business into a strong, vibrant and rapidly growing one. Customer relationship management (CRM) software provides the sauce!<br><br>THE BENEFITS:<br>The right customer details; Increased sales effectiveness; Creates amazing customer engagement.</p>
                 </div>
             </div>
 
@@ -602,7 +602,7 @@ drift.load('mbdgxhgbyunp');
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-1">
-                    MyCoopShop</h2>
+                    MyCoopShop eCommerce Super Site</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">"Find what you need. Get what you want."</h3>
 
             </div>
@@ -617,7 +617,7 @@ drift.load('mbdgxhgbyunp');
     <div class="container">
         <div class="inner-container" style="width: 66%;">
             <hr class="line" style="width: 25%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-5">A variety of everyday businesses representing products and services in electronics, training, indoor plants, business consultants, wellness experts, Bitcoin and Blockchain, water filtration and many more...</div>
+            <div class="section-text align-center mbr-white mbr-fonts-style display-5">MyCoopShop eCommerce Online Super Store displays and markets our everyday businesses that represent products and services ranging from electronics, training, indoor plants, business consultants, wellness experts, Bitcoin and Blockchain, water filtration and many more...</div>
             <hr class="line" style="width: 25%;">
         </div>
     </div>
