--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@ drift.load('mbdgxhgbyunp');
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-1">
-                    MyCoopShop eCommerce Super Site</h2>
+                    MyCoopShop eCommerce Online Super Store</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">"Find what you need. Get what you want."</h3>
 
             </div>
@@ -617,7 +617,7 @@ drift.load('mbdgxhgbyunp');
     <div class="container">
         <div class="inner-container" style="width: 66%;">
             <hr class="line" style="width: 25%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-5">MyCoopShop eCommerce Online Super Store displays and markets our everyday businesses that represent products and services ranging from electronics, training, indoor plants, business consultants, wellness experts, Bitcoin and Blockchain, water filtration and many more...</div>
+            <div class="section-text align-center mbr-white mbr-fonts-style display-5">Supporting everyday businesses displaying members products and services. From electronics, training, indoor plant hire, business consultancy, wellness experts, Bitcoin and Blockchain, water filtration and much more... the Super Store has it all!</div>
             <hr class="line" style="width: 25%;">
         </div>
     </div>
